<resources>
    <string name="app_name">UDrive</string>

    <!-- Strings General -->
    <string name="connection.error">Error en la conexion. Intente luego.</string>
    <string name="malformed.url.error">Error en la url del servidor</string>
    <string name="loading">Cargando...</string>
    <string name="creating_folder">Creando carpeta...</string>
    <string name="deleting_folder">Borrando carpeta...</string>
    <string name="deleting_file">Borrando archivo...</string>

    <string name="folder_already_exists">El nombre de carpeta ya existe</string>
    <string name="file_already_exists">El archivo ya existe</string>
    <string name="error_open_file">Error al abrir el archivo</string>
    <string name="error_save_file">Error al guardar el archivo</string>

    <string name="add_folder_title">Agregar carpeta</string>
    <string name="update_folder_name_title">Actualizar nombre de carpeta</string>
    <string name="add_file_title">Agregar archivo</string>
    <string name="update_file_name_title">Actualizar nombre del archivo</string>
    <string name="view_metadata_title">Informacion del archivo</string>
    <string name="add_folder_input_hint">Ingrese el nombre de la carpeta</string>
    <string name="update_folder_input_hint">Ingrese el nombre de la carpeta</string>
    <string name="update_file_input_hint">Ingrese el nombre del archivo</string>
    <string name="add_tag_file_title">Personalizar tags</string>
    <string name="add_tag_input_hint">Ingrese el nombre del tag</string>

    <string name="update_file_users_title">Actualizar permisos del archivo</string>
    <string name="update_folder_users_title">Actualizar permisos de la carpeta</string>
    <string name="add_user_input_hint">Ingrese el nombre de usuario</string>
    <string name="add_user_button">OK</string>
    <string name="current_users_permission_title">Permisos actuales</string>

    <string name="user_permission_invalid_user">El nombre de usuario es invalido</string>
    <string name="user_permission_existent_user">El nombre de usuario ya existe</string>


    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>


    <!-- Strings Main Activity -->
    <string name="main.title">Bienvenido!</string>
    <string name="main.register">Registrarse</string>
    <string name="main.hasAccount">Ya tenes una cuenta?</string>
    <string name="main.login">Inicia Sesion</string>
    <string name="main.config.server.url">Configurar url servidor</string>

    <!-- Strings Register Activity -->
    <string name="register.actionBar.title">REGISTRO</string>
    <string name="register.hint.username">Usuario</string>
    <string name="register.hint.name">Nombre</string>
    <string name="register.hint.email">Email</string>
    <string name="register.hint.password">Password</string>
    <string name="register.error.username">Ingrese un nombre de usuario por favor</string>
    <string name="register.error.name">Ingrese un nombre por favor</string>
    <string name="register.error.email">Ingrese un email valido</string>
    <string name="register.error.password">Ingrese un password con mas de 6 letras</string>
    <string name="register.button">Registrarse</string>
    <string name="register.waiting">Procesando los datos. Espere un momento por favor.</string>
    <string name="register.success">Bienvenido!</string>
    <string name="register.error">Ha ocurrido un error. Intente nuevamente.</string>
    <string name="register.error.username.exists">El nombre de usuario ya existe.</string>

    <!-- Strings Update Profile Activity -->
    <string name="update.profile.actionBar.title">Perfil</string>
    <string name="update.profile.button">Guardar</string>
    <string name="update.profile.success">Perfil actualizado.</string>
    <string name="update.profile.waiting">Actualizando perfil...</string>

    <!-- Strings Login Activity -->
    <string name="login.actionBar.title">LOGIN</string>
    <string name="login.hint.username">Usuario</string>
    <string name="login.hint.password">Password</string>
    <string name="login.button">Ingresar</string>
    <string name="login.error.username">Ingrese el nombre de usuario por favor</string>
    <string name="login.error.password">Ingrese el password por favor</string>
    <string name="login.waiting">Ingresando...</string>
    <string name="login.error">Ha ocurrido un error. Intente nuevamente.</string>
    <string name="login.error.bad.credentials">Nombre de usuario o contraseña invalidos</string>


    <!-- String Home Activity -->
    <string name="home.actionBar.title">HOME</string>
    <string name="home.hello">HOME</string>
    <string name="home.menu.action.logout">Logout</string>
    <string name="home.menu.action.update_profile">Perfil</string>
    <string name="home.logout.waiting">Desloguendo...</string>
    <string name="home.menu.bottom.title">Acciones</string>
    <string name="home.menu.bottom.new_folder">Agregar nueva carpeta</string>
    <string name="home.menu.bottom.new_file">Agregar nuevo archivo</string>

    <string name="home.menu.actions.view.metadata">Visualizar metadatos</string>
    <string name="home.menu.actions.modify.name">Cambiar nombre</string>
    <string name="home.menu.actions.invite.users">Invitar a otros usuarios</string>
    <string name="home.menu.actions.add.tags">Modificar tags</string>
    <string name="home.menu.actions.delete">Eliminar</string>

    <!-- String Config Activity -->
    <string name="config.actionBar.title">CONFIGURACION</string>
    <string name="config.label.ipserver">Url del Servidor</string>
    <string name="config.hint.ipserver">Ingrese la url del servidor</string>
    <string name="config.button.save">Guardar</string>
    <string name="config.save.success">La configuracion se ha guardado correctamente</string>

    <!-- String View Metadata Action -->
    <string name="view.metadata.label.name">Nombre: </string>
    <string name="view.metadata.label.own">Dueno: </string>
    <string name="view.metadata.label.last.modified">Fecha ultima modificacion: </string>
    <string name="view.metadata.label.last.user">Usuario ultima modificacion: </string>
    <string name="view.metadata.label.version">Version: </string>
    <string name="view.metadata.label.labels">Etiquetas: </string>
    <string name="view.metadata.label.permissions">Permisos: </string>
    <string name="home.menu.actions.recover">Recuperar</string>
    <string name="home.menu.actions.add.version">Subir nueva version</string>
    <string name="home.menu.actions.download.version">Descargar version</string>
    <string name="download_file_versions_title">Descargar version</string>
    <string name="add_tag_button">Ok</string>
    <string name="current_tags_title">Tags actuales</string>
    <string name="label_invalid">Etiqueta invalida</string>
    <string name="label_existent">Etiqueta existente</string>
    <string name="folder_no_action">Carpetas especiales sin acciones</string>
    <string name="has_upload_version">Has subido la version \u0020</string>
    <string name="warning_version_title">Colision de versiones</string>
    <string name="warning_version_text">Esta sobrescribiendo una version aun no descargada. Desea continuar?</string>

</resources>
