<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >


    <EditText
        android:id="@+id/tagInput"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:hint="@string/add_tag_input_hint"
        android:layout_weight="0.83"
        android:layout_toLeftOf="@+id/btnAddUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </EditText>


    <Button
        android:id="@+id/btnAddTag"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:text="@string/add_tag_button"
        android:layout_gravity="right|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_tags_title"
        android:id="@+id/textView4"
        android:textSize="16dp"
        android:textColor="#000000"
        android:layout_below="@+id/tagInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tagsList"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
